patch: small fix for teaser alignment on find out more banner

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_findOutMore.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_findOutMore.scss
@@ -38,6 +38,7 @@
         &__teaser {
             color: $stockport-black;
             margin-bottom: 1em;
+            text-align: start;
         }
 
         &__image {
